--- a/citizensfla-theme/src/main/webapp/templates/navigation.vm
+++ b/citizensfla-theme/src/main/webapp/templates/navigation.vm
@@ -5,7 +5,6 @@
 				#foreach ($nav_item in $nav_items)
 						#set ($nav_item_attr_selected="")
 						#set ($nav_item_attr_has_popup="")
-						#set ($nav_item_caret="")
 						#set ($nav_item_css_class="lfr-nav-item")
 						#set ($nav_item_link_css_class="")
 
@@ -16,7 +15,7 @@
 
 					<li class="$nav_item_css_class" id="layout_$nav_item.getLayoutId()" $nav_item_attr_selected role="presentation">
 						<a aria-labelledby="layout_$nav_item.getLayoutId()" $nav_item_attr_has_popup class="$nav_item_link_css_class" href="$nav_item.getURL()" $nav_item.getTarget() role="menuitem">
-							<span>$nav_item.icon() $nav_item.getName() $nav_item_caret</span>
+							<span>$nav_item.icon() $nav_item.getName() </span>
 						</a>
 
 					</li>
