--- a/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
+++ b/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
@@ -46,62 +46,6 @@ $theme.include($body_top_include)
   <!-- Begin page content -->
   <div class="container">
 
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <img src="${theme_display.getPathThemeRoot()}/images/custom/banner_1.jpg" alt="...">
-            <div class="carousel-title">
-              <p>We Are <b>Citizens</b></p>
-            </div>
-            <div class="carousel-text">
-              <p>Brenda P</p>
-              <p>Learning Developement</p>
-            </div>
-          </div>
-          <div class="item">
-            <img src="${theme_display.getPathThemeRoot()}/images/custom/banner_2.jpg" alt="...">
-          </div>
-          <div class="item">
-            <img src="${theme_display.getPathThemeRoot()}/images/custom/banner_3.jpg" alt="...">
-          </div>
-        </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-
-      <div class="row">
-        <div class="col-md-12 category">
-          <div class="row">
-            <div class="col-sm-12 col-md-4 col-lg-4">
-              <a href="#"><div class="careers"><h2>Careers At Citizens</h2>Work at the best company<br />in the world.</div></a>
-            </div>
-            <div class="col-sm-12 col-md-4 col-lg-4">
-              <a href="#"><div class="policy"><h2>Manage myPolicy</h2>Learn everything there is about<br />the insurance industry.</div></a>
-            </div>
-            <div class="col-sm-12 col-md-4 col-lg-4">
-              <a href="#"><div class="storm"><h2>Storm Prep</h2>Tips and tricks to prepare<br />you for the perfect storm.</div></a>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
       #if ($selectable)
       $theme.include($content_include)
     #else
@@ -119,7 +63,7 @@ $theme.include($body_top_include)
     <div class="links">
       <a href="privacy">Privacy Policy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">Site Map</a>
     </div>
-    <a class="copyright">Copyright 2014 Citizens Property Insurance Corporation of Florida</a>
+    <p class="copyright">Copyright 2014 Citizens Property Insurance Corporation of Florida</p>
 
     <div class="social">
                 <a href="//www.facebook.com/pages/Citizens-Property-Insurance-Corporation" class="navbar-btn btn-primary ">
