adding new consumer theme

--- a/citizensfla-consumer-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-consumer-theme/src/main/webapp/css/custom.css
@@ -980,6 +980,9 @@ body {
 		.copyright {
 			margin: 0;
 			line-height: 24px;
+			a {
+				color: white;
+			}
 		}
 		.social {
 			float: right;
