--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -178,11 +178,11 @@ body {
 				#_145_searchDropdown {
 					.portlet {
 						background: transparent !important;
-						margin-right: 62px !important;
+						padding: 14px 5px 5px 20px !important;
 						.control-group.control-group-inline {
 							margin: 4px !important;
 							#_search_WAR_searchportlet_keywords {
-								width: 198px;
+								width: 366px;
 								box-shadow: none;
 								border-radius: 0px;
 								font-family: "Avenir35-Light" !important;
@@ -194,21 +194,25 @@ body {
 								border: 0;
 							}
 							#_search_WAR_searchportlet_search {
-								height: 22px;
-								margin-left: -7px;
-								background: $lightblue !important;
+								height: 25px;
+								width: 26px;
+								margin-left: 3px;
+								background: $darkblue !important;
 								border-radius: 0;
 								color: #fff !important;
-								line-height: 14px;
 								overflow: hidden;
 								border: 0;
-								top: 8px;
-								position: absolute;
 								&:before {
 									content: "►";
 								}
 							}
 						}
+					}
+					> .dropdown-menu {
+						margin-left: -356px;
+						width: 446px;
+						height: 67px;
+						overflow: hidden;
 					}
 				}
 				#_145_loginDropdown {
@@ -233,7 +237,7 @@ body {
 						}
 						.portlet {
 							background: $navydarkblue !important;
-							padding: 12px 5px 5px 20px !important;
+							padding: 14px 5px 5px 20px !important;
 							color: white;
 							#_58_login, #_58_password {
 								width: 198px;
@@ -1148,43 +1152,14 @@ body {
 	text-indent: 5px;
 }
 
-
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
 	.aui {
 		.container, .navbar .container, .portlet-dockbar .dockbar {
-			width: 750px;
-		}
-		#navigation .navbar-inner ul.nav-collapse {
-			li {
-				margin-left: 24px;
-				a {
-					font-size: 22px;
-				}
-			}
-			.dropdown-menu.child-menu a {
-				font-size: 16px
-			}
-		}
-		#navigation .navbar-inner ul.nav-collapse .dropdown-menu.child-menu a
-		.carousel {
-			.carousel-title {
-				font-size: 60.68px;
-			}
-			.carousel-text {
-				font-size: 16px;
-				line-height: 43%;
-			}
-		}
-		.category .col-sm-12.col-md-4.col-lg-4 a {
-			height: 314px;
-			font-size: 16px;
-		}
-		.category span.title {
-			font-size: 28px;
-			line-height: 28px;
+			width: 1200px;
 		}
 	}
 }
+
 @media (min-width: 992px) {
 	.aui {
 		.container, .navbar .container, .portlet-dockbar .dockbar {
@@ -1220,8 +1195,40 @@ body {
 		}
 	}
 }
-@media (min-width: 1200px) {
-	.aui .container, .aui .navbar .container, .portlet-dockbar .dockbar {
-		width: 1200px;
+
+@media (min-width: 768px) {
+	.aui {
+		.container, .navbar .container, .portlet-dockbar .dockbar {
+			width: 750px;
+		}
+		#navigation .navbar-inner ul.nav-collapse {
+			li {
+				margin-left: 24px;
+				a {
+					font-size: 22px;
+				}
+			}
+			.dropdown-menu.child-menu a {
+				font-size: 16px
+			}
+		}
+		#navigation .navbar-inner ul.nav-collapse .dropdown-menu.child-menu a
+		.carousel {
+			.carousel-title {
+				font-size: 60.68px;
+			}
+			.carousel-text {
+				font-size: 16px;
+				line-height: 43%;
+			}
+		}
+		.category .col-sm-12.col-md-4.col-lg-4 a {
+			height: 314px;
+			font-size: 16px;
+		}
+		.category span.title {
+			font-size: 28px;
+			line-height: 28px;
+		}
 	}
 }
